<resources>
    <string name="app_name">ScientLing</string>
    <string name="login_hint">Login</string>
    <string name="password_hint">Hasło</string>
    <string name="log_in">Zaloguj</string>
    <string name="edit_account">Edytuj konto</string>
    <string name="log_out">Wyloguj</string>
    <string name="log_outing">Wylogowywanie</string>
    <string name="sure_logout">Czy na pewno wylogować</string>
    <string name="login">Login</string>
    <string name="login_or_email">Login lub email</string>
    <string name="password">Hasło</string>
    <string name="show_answers">Pokaż odpowiedzi</string>
    <string name="know">Wiem</string>
    <string name="dontKnow">Nie wiem</string>
    <string name="almostKnow">Prawie wiem</string>
    <string name="put_translation">Wpisz tłumaczenie </string>
    <string name="check_answer">Sprawdź odpowiedź</string>
    <string name="repeat">Powtórz</string>
    <string name="finish">Zakończ</string>
    <string name="title_activity_repetition_list">RepetitionListActivity</string>
    <string name="title_activity_word_edit">WordEditActivity</string>
    <string name="master_words">Przećwiczonych słowek: </string>
    <string name="not_remember">Nie pamiętam hasła</string>
    <string name="register">Utwórz konto</string>
    <string name="send">Wyślij</string>
    <string name="any">Dowolny</string>
    <string name="lack">Brak</string>
    <string name="save">Zapisz</string>
    <string name="next_item">Następne</string>
    <string name="previous_item">Poprzednie</string>
    <string name="change">Zmień</string>
    <string name="search">Szukaj</string>
    <string name="start">Rozpocznij</string>
    <string name="set">Ustaw</string>
    <string name="cancel">Anuluj</string>
    <string name="edit">Edytuj</string>
    <string name="delete">Usuń</string>
    <string name="see">Zobacz</string>
    <string name="add_to_hard">Dodaj do trudnych</string>
    <string name="remove_from_hard">Usuń z trudnych</string>
    <string name="clear">Wyczyść</string>
    <string name="add">Dodaj</string>
    <string name="filter">Filtruj</string>
    <string name="sort">Sortuj</string>
    <string name="loading">Czekaj, trwa ładowanie</string>
    <string name="sets_not_found">Nie znaleziono pasujących zestawów</string>
    <string name="connection_error">Wystąpił błąd połączenia</string>
    <string name="bad">Źle</string>
    <string name="correct_answer">Poprawna odpowiedź</string>
    <string name="your_answer">Twoja odpowiedź</string>
    <string name="next_question">Następne</string>
    <string name="name">Nazwa</string>
    <string name="show_translation">Pokaż tłumaczenie</string>
    <string name="hide_translation">Ukryj tłumaczenie</string>
    <string name="word">Słówko</string>
    <string name="part_of_speech">Częśc mowy</string>
    <string name="category">Kategoria</string>
    <string name="lesson">Lekcja</string>
    <string name="difficult">Poziom trudności</string>
    <string name="definition">Definicja</string>
    <string name="definition_translation">Tłumaczenie definicji</string>
    <string name="sentences_example">Przykładowe zdania</string>
    <string name="sentence">Zdanie</string>
    <string name="sentence_translation">Tłumaczenie zdania</string>
    <string name="translation_separator">Tłumaczenia odziel znakiem ;</string>
    <string name="number_words">Liczba słówek</string>
    <string name="hints">Wskazówki</string>
    <string name="hint">Wskazówka</string>
    <string name="image">Obrazek</string>
    <string name="record">Nagranie</string>
    <string name="x">X</string>
    <string name="mode">Rodzaj słówka</string>
    <string name="loading_words">Trwa ładowanie słowek</string>
    <string name="words_num">Liczba słówek</string>
    <string name="size">Rozmiar</string>
    <string name="rating">Ocena</string>
    <string name="download_count">Liczba pobrań</string>
    <string name="start_repetition">Rozpocznij powtórkę</string>
    <string name="l2">Język którego chcesz sie nauczyć</string>
    <string name="l1">Język który znasz </string>
    <string name="lessons">Lekcje</string>
    <string name="choose">Wybierz</string>
    <string name="upload">Wyślij</string>
    <string name="set_name">Nazwa zestawu</string>
    <string name="language">Język</string>
    <string name="vocabulary_set">Zestaw</string>
    <string name="no_set">Nie ustawiono zbioru</string>
    <string name="choose_set">Wybierz zestaw</string>
    <string name="create_set">Utwórz zestaw</string>
    <string name="sets_tab">Zestawy</string>
    <string name="server_tab">Wysłane</string>
    <string name="delete_images">Usuń obrazki</string>
    <string name="delete_records">Usuń nagrania</string>
    <string name="change_description">Zmień opis</string>
    <string name="lesson_number">Numer lekcji</string>
    <string name="lesson_name">Nazwa lekcji</string>
    <string name="words">Słówka</string>
    <string name="unallocated">Nieprzypisane</string>
    <string name="change_lesson">Do której lekcji przenieść słówka</string>
    <string name="deleting_lesson_message">Czekaj, trwa usuwanie lekcji</string>
    <string name="category_name">Nazwa kategorii</string>
    <string name="hint_content">Zawartość podpowiedzi</string>
    <string name="noun">Rzeczownik</string>
    <string name="verb">Czasownik</string>
    <string name="article">Przedimek</string>
    <string name="adjective">Przymiotnik</string>
    <string name="adverb">Przysłówek</string>
    <string name="pronouns">Zaimek</string>
    <string name="linkin_words">Spójnik</string>
    <string name="numeral">Liczebnik</string>
    <string name="new_words">Nowe słówka</string>
    <string name="repetitions">Powtórki</string>
    <string name="polish">Polski</string>
    <string name="english">Angielski</string>
    <string name="spanish">Hiszpański</string>
    <string name="other_language">Inny</string>
    <string name="title_activity_sentences_list">SentencesListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sentence_detail">SentenceDetailActivity</string>
    <string name="title_activity_set">SetActivity</string>
    <string name="title_activity_lesson_edit">LessonEditActivity</string>
    <string name="title_activity_set_selection">SetSelectionActivity</string>
    <string name="set_save_failed">Wystapił błąd podczas zapisywania do bazy dancyh :(</string>
    <string name="save_word_failed">Wystąpił błąd podczas zapisywania słówka do bazy danych</string>
    <string name="save_word_success">Pomyślnie zapisano słówko do bazy danych</string>
    <string name="you_lost_progress_learning">Stracisz cały postęp z tej lekcji</string>
    <string name="you_lost_progress_exercise">Stracisz cały postęp z tego ćwiczenia</string>
    <string name="your_sure_leave">Czy na pewno chcesz wyjść?</string>
    <string name="close_session_learning">Zamknij sesje nauki</string>
    <string name="close_exercise">Zamknij ćwiczenie</string>
    <string name="no_words">Brak słówek</string>
    <string name="not_found_words">Nie znaleziono pasujacych słówek</string>
    <string name="you_are_sure">Czy jesteś pewien?</string>
    <string name="change_direction_message">Zmiana kierunku ćwiczenia spowoduje rozpoczęcie ćwiczenia od początku.</string>
    <string name="no_repetitions_today">Nie ma zaplanowanych powtórek na dzisiaj</string>
    <string name="deleting_word">Usuwanie słówka</string>
    <string name="deleting_lesson">Usuwanie lekcji</string>
    <string name="deleting_set">Usuwanie zestawu</string>
    <string name="deleting_category">Usuwanie kategorii</string>
    <string name="sure_delete_word">Czy na pewno chcesz usunąć słówko</string>
    <string name="word_lesson_connection">Liczba słówek w usuwanej lekcji:</string>
    <string name="sure_delete_category">Czy na pewno chesz usunąć kategorię</string>
    <string name="sure_delete_set">Czy na pewno chcesz usunąć zestaw?</string>
    <string name="sure_delete_images">Czy na pewno chcesz usunąć obrazki?</string>
    <string name="sure_delete_records">Czy na pewno chcesz usunąć nagrania?</string>
    <string name="sure_delte_lesson">Czy na pewno chcesz usunąć lekcje?</string>
    <string name="not_empty_field">To pole nie może być puste</string>
    <string name="not_zero_field">Wartość musi być większa od zera</string>
    <string name="category_exist">Ta kategoria już istnieje</string>
    <string name="data_loading">Trwa wczytywanie danych</string>
    <string name="success_save_set">Pomyślnie zapisano zestaw</string>
    <string name="success_update_set">Pomyślnie zaktualizowano zestaw</string>
    <string name="ok">OK</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="back">Cofnij</string>
    <string name="delete_with_words">Usuń ze słówkami</string>
    <string name="delete_without_words">Usuń, zostaw słówka</string>
    <string name="saving">Zapisywanie</string>
    <string name="word_saving">Trwa zapisywanie słówka, proszę czekać</string>
    <string name="title_activity_lesson_selection">LessonSelectionActivity</string>
    <string name="title_activity_category_selection">CategorySelectionActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_word_manager">WordManagerActivity</string>
    <string name="title_activity_learning_list">LearningListActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="play_record_error">Wystąpił problem podczas odtwarzania nagrania</string>
    <string name="manage_words">Zarządzaj bazą słówek</string>
    <string name="flashcards">Fiszki</string>
    <string name="more_flashcards">Wiecej fiszek</string>
    <string name="change_set">Zmień zestaw</string>
    <string name="manage_sets">Zarządzaj zestawami</string>
    <string name="settings">Ustawienia</string>
    <string name="download_sets">Pobierz zestawy</string>
    <string name="progress">Postęp</string>
    <string name="learning_category">Nauka</string>
    <string name="notification_category">Powiadomienia</string>
    <string name="general_category">Ogólne</string>
    <string name="words_in_learning">Liczba słów w każdej sesji nauki</string>
    <string name="words_in_repetitions">Liczba słów w każdej powtórce</string>
    <string name="number_answers">Liczba odpowiedzi w teście wyboru</string>
    <string name="number_flashcard">Liczba fiszek</string>
    <string name="start_exercise">Początkowe ćwiczenie w powtórce</string>
    <string name="start_direction">Domyślny kierunek ćwiczenia</string>
    <string name="start_direction_summary">Określa czy ćwiczenie będzie prowadzone z języka obego na ojczysty czy odwrotnie</string>
    <string name="reminders">Przypomnienia</string>
    <string name="reminder_time">Czas przypomnienia</string>
    <string name="sounds">Dźwięki</string>
    <string name="answer_connection">Odpowiedzi połączone z pytaniem</string>
    <string name="answer_connection_hint">Czy odpowiedzi w ćwiczeniu wyboru mają być powiązane z tematem pytania</string>
    <string name="order_learning">Kolejność wyboru słów do uczenia</string>
    <string name="show_speech_button">Przycisk mówienia w ćwiczeniu Wpisywanie</string>
    <string name="reminder_sound">Dźwięk przypomnienia</string>
    <string name="reminder_vibration">Wibracja</string>
    <string name="monday_abbr">PON</string>
    <string name="tuesday_abbr">WT</string>
    <string name="wednesday_abbr">ŚR</string>
    <string name="thursday_abbr">CZW</string>
    <string name="friday_abbr">PT</string>
    <string name="saturday_abbr">SOB</string>
    <string name="sunday_abbr">NIEDZ</string>
    <string name="email">Email</string>
    <string name="repeat_password">Powtórz hasło</string>
</resources>