<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dyszlewskiR.edu.scientling.presentation.fragment.WordAdvancedEditFragment"
    android:orientation="vertical">


    <TextView
        style="@style/LabelStyle"
        android:text="@string/part_of_speech"/>
    <Spinner

        style="@style/SpinnerStyle"
        android:id="@+id/part_of_speech_spinner"
        />
    <TextView
        style="@style/LabelStyle"
        android:text="@string/category"/>
    <Button
        style="@style/ButtonStyle"
        android:id="@+id/category_button"
        android:text="@string/lack"
        android:focusable="true"
        android:layout_margin="@dimen/margin"/>

    <TextView
        style="@style/LabelStyle"
        android:text="@string/difficult"/>
    <RatingBar
        android:id="@+id/difficult_ratingbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        android:layout_gravity="center"
        />

    <TextView
        style="@style/LabelStyle"
        android:text="@string/definition"/>
    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/definition_edit_text"
        android:lines="3"/>
    <TextView
        style="@style/LabelStyle"
        android:text="@string/definition_translation"
        android:id="@+id/definition_translation_label"/>
    <EditText
        style="@style/EditTextStyle"
        android:id="@+id/definition_translation_edit_text"
        android:lines="3"/>
    <Button
        android:id="@+id/sentencesButton"
        style="@style/ButtonStyle"
        android:text="@string/sentences_example"
        android:focusable="true"
        android:layout_margin="@dimen/margin"/>
    <Button
        android:id="@+id/hints_button"
        style="@style/ButtonStyle"
        android:text="@string/hints"
        android:layout_margin="@dimen/margin"
        />
    <ImageView
        android:id="@+id/image_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:visibility="gone"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin">
        <Button
            android:id="@+id/image_button"
            style="@style/ButtonStyle"
            android:text="@string/image"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/remove_image_button"
            style="@style/ButtonStyle"
            android:layout_width="56dp"
            android:text="@string/x"/>
    </LinearLayout>



</LinearLayout>
