<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText android:id="@+id/sentence_edit_text"
        style="@style/SmallEditTextStyle"
        android:hint="@string/sentence"
        android:lines="3"/>
    <EditText android:id="@+id/translation_edit_text"
        style="@style/SmallEditTextStyle"
        android:hint="@string/sentence_translation"
        android:lines="3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/margin">
        <Button android:id="@+id/clear_button"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:text="@string/clear"
            android:layout_marginRight="@dimen/margin"
            />
        <Button android:id="@+id/ok_button"
            style="@style/ButtonStyle"
            android:text="@string/ok"
            />
    </LinearLayout>
</LinearLayout>