<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dyszlewskiR.edu.scientling.presentation.activity.LoginActivity"
    android:orientation="vertical"
    android:gravity="center">
    <TextView android:id="@+id/info_text_view"
        style="@style/TextViewStyle"
        android:layout_gravity="center"
        />
    <TextView android:id="@+id/error_text_view"
        style="@style/TextViewStyle"
        android:textColor="@color/incorrectColor"
        android:gravity="center"
        />
    <EditText android:id="@+id/login_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/login_or_email"/>
    <EditText android:id="@+id/password_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/password"
        android:layout_marginTop="@dimen/margin"
        android:inputType="textPassword"/>
    <Button android:id="@+id/login_button"
        style="@style/ButtonStyle"
        android:text="@string/log_in"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="30dp"/>
    <TextView android:id="@+id/not_remember_button"
        style="@style/TextViewStyle"
        android:text="@string/not_remember"
        android:gravity="center"
        android:layout_marginTop="30dp"/>
    <TextView android:id="@+id/register_button"
        style="@style/TextViewStyle"
        android:text="@string/register"
        android:gravity="center"/>

</LinearLayout>
