<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <EditText android:id="@+id/name_edit_text"
         style="@style/EditTextStyle"
        android:hint="@string/lesson_name"
        android:layout_margin="@dimen/margin"/>
    <EditText android:id="@+id/number_edit_text"
        style="@style/EditTextStyle"
        android:hint="@string/lesson_number"
        android:inputType="number"
        android:layout_margin="@dimen/margin"/>
    <Button android:id="@+id/ok_button"
        style="@style/ButtonStyle"
        android:text="@string/ok"
        android:layout_margin="@dimen/margin"
        />
</LinearLayout>