<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
        <ImageButton
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/calendar_prev_button"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>
        <TextView
            style="@style/TextViewStyle"
            android:id="@+id/calendar_month_text_view"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/calendar_next_button"
            android:layout_toRightOf="@+id/calendar_prev_button"
            android:gravity="center"
            android:textColor="#222222"

            />
        <ImageButton
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:id="@+id/calendar_next_button"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/calendar_header"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/monday_abbr"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/tuesday_abbr"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/wednesday_abbr"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/thursday_abbr"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/friday_abbr"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/saturday_abbr"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sunday_abbr"/>

    </LinearLayout>

    <GridView
        android:id="@+id/calendar_grid_view"
        android:layout_width="match_parent"
        android:layout_height="340dp"
        android:numColumns="7"
        />
</LinearLayout>