<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:background="@drawable/shadow_border"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dyszlewskiR.edu.scientling.presentation.activity.RegistrationActivity"
    tools:showIn="@layout/activity_registration">

    <EditText
        android:id="@+id/login_edit_text"
        style="@style/EditTextStyle"
        android:layout_marginTop="30dp"
        android:hint="@string/login" />

    <EditText
        android:id="@+id/email_edit_text"
        style="@style/EditTextStyle"
        android:layout_below="@id/login_edit_text"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/password_edit_text"
        style="@style/EditTextStyle"
        android:layout_below="@id/email_edit_text"
        android:layout_marginTop="10dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/repeat_password_edit_text"
        style="@style/EditTextStyle"
        android:layout_below="@id/password_edit_text"
        android:layout_marginTop="10dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/register_button"
        style="@style/ButtonStyle"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/margin"
        android:text="@string/register" />

</RelativeLayout>
